<resources>
    <string name="cat">шотландський кіт</string>
    <string name="haski">хаскі</string>
    <string name="ara">ара</string>
    <string name="details">детальніше</string>
    <string name="infCat">Визначальна риса шотландських висловухих кішок — це їхні вуха: маленькі, загнуті вперед, які повністю закривають вушну раковину. Кінчики вух закруглені. Шотландська висловуха — це кішка середнього розміру з міцним компактним тілом. Голова округлої форми з чітко виділеними подушечками вібрисів, шия — коротка. Очі великі і широко відкриті, мордочка має милий вираз. Хутро в шотландських висловухих кішок коротке і густе. Воно має різні варіанти забарвлення та малюнків. </string>
    <string name="infHaski">Це собаки середнього розміру; їхні пропорції відбивають баланс сили, швидкості та витривалості.
        Ця порода має двошарову шерсть середньої довжини, прямі вуха та хвіст, що нагадує пензлик, шерсть буває найрізноманітніших забарвлень, включаючи білий, з яскравими візерунками.
        Дорослі пси мають зріст 53–60 см, а суки — 51–56 см. Дорослі пси важать 20–27 кг, а дорослі суки — 16–23 кг.</string>
    <string name="infAra">Червоний ара вважається одним з найбільших представників свого сімейства. Розмір його тіла досягає 80-100 см при вазі 1,2-1,7 кг.
        Хвіст пернатого виростає до 60 см, а розмах крил в середньому становить 40 см.Папуга червоний ара наділений високим інтелектом, активним темпераментом і своєрідним характером.
        Він веде себе дуже дружелюбно стосовно обраного господаря, але іноді буває примхливим і ревнивим, а при зміні власників може проявляти агресію.</string>
    <string name="app_name">animals</string>
</resources>