<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:id="@+id/haskiCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageHaski"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/dog" />

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNameHaski"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/haski" />

                <TextView
                    android:id="@+id/textinfHaski"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/infHaski" />
            </LinearLayout>

            <Button
                android:id="@+id/button_haski"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CatCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/haskiCard"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imagecat"
                app:srcCompat="@drawable/cat"
                android:scaleType="centerCrop"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textcat"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat"/>
                <TextView
                    android:id="@+id/textinfcat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infCat"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/araCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CatCard"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageKin"
                app:srcCompat="@drawable/ara"
                android:scaleType="centerCrop"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textNameKin"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ara"/>
                <TextView
                    android:id="@+id/textDiscriptionKin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infAra"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_ara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

